[gd_scene load_steps=14 format=3 uid="uid://bk55f0nyl8x2h"]

[ext_resource type="Script" uid="uid://dsp1bk8rofupu" path="res://scripts/slots.gd" id="1_6kwmw"]
[ext_resource type="Texture2D" uid="uid://bkuxcs126mgd3" path="res://assets/Pixel_slot_machines.png" id="2_wmvve"]
[ext_resource type="Texture2D" uid="uid://c1iuem3jc2s1v" path="res://assets/slot_icons.png" id="3_r14jf"]
[ext_resource type="FontFile" uid="uid://dsdsw7axr2tds" path="res://assets/fonts/Kenney Mini Square.ttf" id="4_dlq1d"]
[ext_resource type="StyleBox" uid="uid://db6s1v6bg352u" path="res://scenes/main_buttons.tres" id="5_5hphk"]
[ext_resource type="StyleBox" uid="uid://b7mcobdps5rxj" path="res://scenes/buttons_pressed.tres" id="6_fbtk4"]
[ext_resource type="StyleBox" uid="uid://ok6rscd3y3m" path="res://scenes/button_hover.tres" id="7_58wj5"]
[ext_resource type="LabelSettings" uid="uid://bfvl42gbhptkm" path="res://scenes/betting_screen_black_jack.tres" id="8_wmvve"]
[ext_resource type="AudioStream" uid="uid://do8xl0msp1fcd" path="res://assets/Sounds/681107__simbakademzeb1__es_slot-machine-41-sfx-producer.mp3" id="9_r14jf"]
[ext_resource type="AudioStream" uid="uid://bvs2u6aqr0ew0" path="res://assets/Sounds/795404__robinhood76__13224-coin-slot-load.wav" id="10_dlq1d"]

[sub_resource type="Animation" id="Animation_unm37"]
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 32, 32), Rect2(32, 0, 32, 32), Rect2(64, 0, 32, 32), Rect2(0, 32, 32, 32), Rect2(32, 32, 32, 32)]
}

[sub_resource type="Animation" id="Animation_5g6lb"]
resource_name = "spin"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 32, 32), Rect2(32, 0, 32, 32), Rect2(64, 0, 32, 32), Rect2(0, 32, 32, 32), Rect2(32, 32, 32, 32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xnm1a"]
_data = {
&"RESET": SubResource("Animation_unm37"),
&"spin": SubResource("Animation_5g6lb")
}

[node name="Slots" type="Node2D" node_paths=PackedStringArray("lblerror")]
script = ExtResource("1_6kwmw")
lblerror = NodePath("lblError")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.37835965, 0.30219585, 0.22849432, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(492.0001, 620.00006)
scale = Vector2(44.250004, 39.750004)
texture = ExtResource("2_wmvve")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="icons1" type="Sprite2D" parent="."]
position = Vector2(197.35, 360)
scale = Vector2(4.3125005, 4.8750005)
texture = ExtResource("3_r14jf")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="AnimationPlayer1" type="AnimationPlayer" parent="icons1"]
libraries = {
&"": SubResource("AnimationLibrary_xnm1a")
}

[node name="icons2" type="Sprite2D" parent="."]
position = Vector2(728.295, 368)
scale = Vector2(4.3125005, 4.8750005)
texture = ExtResource("3_r14jf")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="AnimationPlayer2" type="AnimationPlayer" parent="icons2"]
libraries = {
&"": SubResource("AnimationLibrary_xnm1a")
}

[node name="icons3" type="Sprite2D" parent="."]
position = Vector2(463.48, 360)
scale = Vector2(4.3125005, 4.8750005)
texture = ExtResource("3_r14jf")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="AnimationPlayer3" type="AnimationPlayer" parent="icons3"]
libraries = {
&"": SubResource("AnimationLibrary_xnm1a")
}

[node name="btnSpin" type="Button" parent="."]
offset_left = 944.0
offset_top = 536.0
offset_right = 1033.0
offset_bottom = 589.0
theme_override_fonts/font = ExtResource("4_dlq1d")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("5_5hphk")
theme_override_styles/pressed = ExtResource("6_fbtk4")
theme_override_styles/hover = ExtResource("7_58wj5")
text = " spin "

[node name="btnBack" type="Button" parent="."]
offset_left = 56.0
offset_top = 536.0
offset_right = 160.0
offset_bottom = 584.0
theme_override_fonts/font = ExtResource("4_dlq1d")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("5_5hphk")
theme_override_styles/pressed = ExtResource("6_fbtk4")
theme_override_styles/hover = ExtResource("7_58wj5")
text = " Back "

[node name="lblError" type="Label" parent="."]
offset_left = 328.0
offset_top = 72.0
offset_right = 656.0
offset_bottom = 128.0
label_settings = ExtResource("8_wmvve")
autowrap_mode = 2

[node name="icons1_states" type="Node2D" parent="."]

[node name="iconset1_side1" type="Sprite2D" parent="icons1_states"]
position = Vector2(197.35, 360)
scale = Vector2(4.313, 4.313)
texture = ExtResource("3_r14jf")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="iconset1_side2" type="Sprite2D" parent="icons1_states"]
position = Vector2(197.35, 360)
scale = Vector2(4.313, 4.313)
texture = ExtResource("3_r14jf")
region_enabled = true
region_rect = Rect2(32, 0, 32, 32)

[node name="iconset1_side3" type="Sprite2D" parent="icons1_states"]
position = Vector2(197.35, 360)
scale = Vector2(4.313, 4.313)
texture = ExtResource("3_r14jf")
region_enabled = true
region_rect = Rect2(64, 0, 32, 32)

[node name="iconset1_side4" type="Sprite2D" parent="icons1_states"]
position = Vector2(197.35, 360)
scale = Vector2(4.313, 4.313)
texture = ExtResource("3_r14jf")
region_enabled = true
region_rect = Rect2(0, 32, 32, 32)

[node name="iconset1_side5" type="Sprite2D" parent="icons1_states"]
position = Vector2(197.35, 360)
scale = Vector2(4.313, 4.313)
texture = ExtResource("3_r14jf")
region_enabled = true
region_rect = Rect2(32, 32, 32, 32)

[node name="icons2_states" type="Node2D" parent="."]

[node name="iconset2_side1" type="Sprite2D" parent="icons2_states"]
position = Vector2(463.48, 360)
scale = Vector2(4.313, 4.313)
texture = ExtResource("3_r14jf")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="iconset2_side2" type="Sprite2D" parent="icons2_states"]
position = Vector2(463.48, 360)
scale = Vector2(4.313, 4.313)
texture = ExtResource("3_r14jf")
region_enabled = true
region_rect = Rect2(32, 0, 32, 32)

[node name="iconset2_side3" type="Sprite2D" parent="icons2_states"]
position = Vector2(463.48, 360)
scale = Vector2(4.313, 4.313)
texture = ExtResource("3_r14jf")
region_enabled = true
region_rect = Rect2(64, 0, 32, 32)

[node name="iconset2_side4" type="Sprite2D" parent="icons2_states"]
position = Vector2(463.48, 360)
scale = Vector2(4.313, 4.313)
texture = ExtResource("3_r14jf")
region_enabled = true
region_rect = Rect2(0, 32, 32, 32)

[node name="iconset2_side5" type="Sprite2D" parent="icons2_states"]
position = Vector2(463.48, 360)
scale = Vector2(4.313, 4.313)
texture = ExtResource("3_r14jf")
region_enabled = true
region_rect = Rect2(32, 32, 32, 32)

[node name="icons3_states" type="Node2D" parent="."]

[node name="iconset3_side1" type="Sprite2D" parent="icons3_states"]
position = Vector2(728.295, 368)
scale = Vector2(4.313, 4.313)
texture = ExtResource("3_r14jf")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="iconset3_side2" type="Sprite2D" parent="icons3_states"]
position = Vector2(728.295, 368)
scale = Vector2(4.313, 4.313)
texture = ExtResource("3_r14jf")
region_enabled = true
region_rect = Rect2(32, 0, 32, 32)

[node name="iconset3_side3" type="Sprite2D" parent="icons3_states"]
position = Vector2(728.295, 368)
scale = Vector2(4.313, 4.313)
texture = ExtResource("3_r14jf")
region_enabled = true
region_rect = Rect2(64, 0, 32, 32)

[node name="iconset3_side4" type="Sprite2D" parent="icons3_states"]
position = Vector2(728.295, 368)
scale = Vector2(4.313, 4.313)
texture = ExtResource("3_r14jf")
region_enabled = true
region_rect = Rect2(0, 32, 32, 32)

[node name="iconset3_side5" type="Sprite2D" parent="icons3_states"]
position = Vector2(728.295, 368)
scale = Vector2(4.313, 4.313)
texture = ExtResource("3_r14jf")
region_enabled = true
region_rect = Rect2(32, 32, 32, 32)

[node name="slotSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_r14jf")
volume_db = 2.0

[node name="coinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_dlq1d")
volume_db = 2.0

[connection signal="pressed" from="btnSpin" to="." method="_on_btn_spin_pressed"]
[connection signal="pressed" from="btnBack" to="." method="_on_btn_back_pressed"]
